--- a/styles/global.css
+++ b/styles/global.css
@@ -32,7 +32,7 @@ h1 {
   margin-top: 8rem;
   background: -webkit-linear-gradient(left, #38d39f, #38a4d3);
   -webkit-text-fill-color: transparent;
-  -webkit-text-background-clip: text;
+  -webkit-background-clip: text;
   background-clip: text;
   display: inline-block;
   display: flex;
