--- a/styles/cross.css
+++ b/styles/cross.css
@@ -35,11 +35,73 @@ main {
 
 .img-container {
   margin-top: 4rem;
-  width: 80rem;
+  max-width: 80rem;
 }
 
 .img-container img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+hr {
+  margin-top: 4rem;
+}
+
+.btn-container {
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn {
+  padding: 1.5rem 3rem;
+  background: cadetblue;
+  border-radius: 4rem;
+  border: none;
+  margin: 0rem 2rem;
+  color: var(--darkgray-text);
+  font-size: 1.2rem;
+  background: white;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.fa-github {
+  font-size: 2rem;
+  margin-left: 1rem;
+}
+
+.web {
+  border: 2px solid #41a6bd;
+  transition: ease 0.8s;
+}
+
+.git {
+  border: 2px solid #484c50;
+  transition: ease 0.8s;
+}
+
+.web:hover {
+  color: white;
+  background: #41a6bd;
+}
+
+.web:hover > .iconify {
+  color: white;
+}
+
+.git:hover {
+  color: white;
+  background: #484c50;
+}
+
+.iconify {
+  width: 2rem;
+  height: 2rem;
+  margin-left: 1rem;
+  color: #41a6bd;
+  transition: ease 0.8s;
 }
