--- a/styles/global.css
+++ b/styles/global.css
@@ -72,3 +72,120 @@ header {
 .target {
   font-weight: bold;
 }
+
+h3 {
+  text-align: left;
+  margin-top: 8rem;
+}
+
+p {
+  color: var(--darkgray-text);
+  line-height: 2rem;
+  font-size: 1.4rem;
+}
+
+/* Projects page */
+
+.wrapper {
+  max-width: 80rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
+
+.container {
+  max-width: 80rem;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+.text-container {
+  max-width: 80rem;
+}
+
+.img-container {
+  margin-top: 4rem;
+  max-width: 80rem;
+}
+
+.img-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+hr {
+  margin-top: 4rem;
+}
+
+.btn-container {
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn {
+  padding: 1.5rem 3rem;
+  background: cadetblue;
+  border-radius: 4rem;
+  border: none;
+  margin: 0rem 2rem;
+  color: var(--darkgray-text);
+  font-size: 1.2rem;
+  background: white;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.fa-github {
+  font-size: 2rem;
+  margin-left: 1rem;
+}
+
+.web {
+  border: 2px solid #41a6bd;
+  transition: ease 0.8s;
+  color: #41a6bd;
+}
+
+.git {
+  border: 2px solid #484c50;
+  transition: ease 0.8s;
+}
+
+.web:hover {
+  color: white;
+  background: #41a6bd;
+}
+
+.web:hover > .iconify {
+  color: white;
+}
+
+.git:hover {
+  color: white;
+  background: #484c50;
+}
+
+.iconify {
+  width: 2rem;
+  height: 2rem;
+  margin-left: 1rem;
+  color: #41a6bd;
+  transition: ease 0.8s;
+}
+
+.text {
+  margin-bottom: 2rem;
+}
+
+@media screen and (max-width: 575px) {
+  .nav-container a {
+    margin: 4rem 1rem;
+  }
+}
