--- a/styles/global.css
+++ b/styles/global.css
@@ -48,7 +48,7 @@ h2 {
 h3 {
   font-size: 2rem;
   text-align: center;
-  margin: 2rem 0rem;
+  margin: 8rem 0rem 2rem 0rem;
   color: var(--darkgray-text);
 }
 
@@ -73,15 +73,11 @@ header {
   font-weight: bold;
 }
 
-h3 {
-  text-align: left;
-  margin-top: 8rem;
-}
-
 p {
   color: var(--darkgray-text);
   line-height: 2rem;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
+  line-height: 2.75rem;
 }
 
 /* Projects page */
@@ -104,6 +100,7 @@ p {
 
 .text-container {
   max-width: 80rem;
+  padding: 0rem 2rem;
 }
 
 .img-container {
